fixes date filter radio button not responding well and disabled apply filter button not showing properly

--- a/src/Pages/UserPages/LogListPage/Styles/styles.scss
+++ b/src/Pages/UserPages/LogListPage/Styles/styles.scss
@@ -16,3 +16,7 @@
 .swiper-pagination {
   position: static !important;
 }
+
+.Mui-disabled.MuiButton-root {
+  background-color: rgb(186, 186, 186) !important;
+}
